# simulator-bindings

./: CITATION.cff  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  dependency-review.yml  docs.yml  publish.yml  scorecards.yml
cargo-simics-build/: Cargo.toml
cargo-simics-build/src/: lib.rs
docs/: book.toml
docs/src/: SUMMARY.md  build-directives.md  environment-variables.md  releasing.md
ispm-wrapper/: Cargo.toml
ispm-wrapper/src/: lib.rs
scripts/: check.sh  dependabot.sh  gen-simics-api-items.rs  list-simics-versions.sh  publish.sh  simics-changes.sh
simics/: Cargo.toml  build.rs
simics-api-sys/: Cargo.toml  build.rs  simics_api_items.rs
simics-build-utils/: Cargo.toml
simics-build-utils/src/: lib.rs
simics-macro/: Cargo.toml
simics-macro/src/: lib.rs
simics-macro/src/interface/: mod.rs
simics-macro/src/versioned/: mod.rs
simics-package/: Cargo.toml
simics-package/src/spec/: mod.rs
simics-python-utils/: Cargo.toml
simics-python-utils/src/: discovery.rs  environment.rs  lib.rs  version.rs
simics-sign/: Cargo.toml
simics-sign/src/: lib.rs
simics-test/: Cargo.toml
simics-test/src/: lib.rs
simics/src/: lib.rs
simics/src/api/base/: attr_value.rs  conf_object.rs  sim_exception.rs
simics/src/api/internal/: core.rs
simics/src/api/simulator/: embed.rs  hap_consumer.rs  mod.rs  snapshots.rs
simics/src/api/util/: alloc.rs
simics/src/log/: mod.rs
