# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "cargo-simics-build"
version = "0.1.0"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Build utility for Intel® Simics® Simulator modules"
documentation = "https://intel.github.io/simulator-bindings/crates/cargo_simics_build/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings"
repository = "https://github.com/intel/simulator-bindings"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]

[dependencies]
anyhow = "1.0.88"
artifact-dependency = "0.1.7"
cargo-subcommand = { version = "0.12.0", features = ["clap"] }
clap = { version = "4.5.17", features = ["derive"] }
command-ext = "0.1.2"
itertools = "0.13.0"
thiserror = "1.0.63"

ispm-wrapper = { version = "0.1.0", workspace = true }
simics-package = { version = "0.1.0", workspace = true }
simics-sign = { version = "0.1.0", workspace = true }
