# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ispm-wrapper"
version = "0.1.1"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Wrappers for Intel® Simics® Package Manager commands"
documentation = "https://intel.github.io/simulator-bindings/crates/ispm_wrapper/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings"
repository = "https://github.com/intel/simulator-bindings"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]


[dependencies]
anyhow = "1.0.88"
command-ext = "0.1.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
typed-builder = "0.20.0"
versions = { version = "6.2.0", features = ["serde"] }
