# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-build-utils"
version = "0.1.1"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Intel® Simics® Simulator build and linking utilities"
documentation = "https://intel.github.io/simulator-bindings/crates/simics_build_utils/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings"
repository = "https://github.com/intel/simulator-bindings"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]

[dependencies]
anyhow = "1.0.88"
versions = { version = "6.2.0", features = ["serde"] }

ispm-wrapper = { version = "0.1.0", workspace = true }
simics-api-sys = { version = "0.1.1", workspace = true }
