# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-macro"
version = "0.1.0"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Proc macros for building Intel® Simics® Simulator modules"
documentation = "https://intel.github.io/simulator-bindings/crates/simics_macro/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings"
repository = "https://github.com/intel/simulator-bindings"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]

[lib]
proc-macro = true

[dependencies]
chrono = "0.4.38"
command-ext = "0.1.2"
darling = "0.20.10"
indoc = "2.0.5"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["full"] }

ispm-wrapper = { version = "0.1.0", workspace = true }
simics-api-sys = { version = "0.1.1", workspace = true }
simics-sign = { version = "0.1.0", workspace = true }
