# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-package"
version = "0.2.5"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Intel® Simics® Simulator module packaging tools"
documentation = "https://intel.github.io/simulator-bindings/crates/simics_package/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings"
repository = "https://github.com/intel/simulator-bindings"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]

[dependencies]
artifact-dependency = "0.1.7"
cargo-subcommand = "0.12.0"
cargo_metadata = "0.18.1"
command-ext = "0.1.2"
flate2 = "1.0.33"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tar = "0.4.41"
thiserror = "1.0.63"
typed-builder = "0.20.0"
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"
