# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-sign"
version = "0.2.3"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Intel® Simics® Simulator module signing tools"
documentation = "https://intel.github.io/simulator-bindings/crates/simics_sign/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings"
repository = "https://github.com/intel/simulator-bindings"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]

[dependencies]
chrono = "0.4.38"
object = "0.36.4"
thiserror = "1.0.63"
