# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics-test"
version = "0.2.0"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Intel Simics Simulator module testing tools"
documentation = "https://intel.github.io/simulator-bindings/crates/simics_test/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings"
repository = "https://github.com/intel/simulator-bindings"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]

[dependencies]
anyhow = "1.0.88"
cargo-subcommand = "0.12.0"
cargo_metadata = "0.18.1"
command-ext = "0.1.2"
getters3 = "0.1.1"
indoc = "2.0.5"
typed-builder = "0.20.0"
versions = { version = "6.2.0", features = ["serde"] }
walkdir = "2.5.0"

cargo-simics-build = { workspace = true }
ispm-wrapper = { workspace = true }
