# Copyright (C) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0

[package]
name = "simics"
version = "0.1.0"
authors = ["Rowan Hart <rowan.hart@intel.com>"]
edition = "2021"
description = "Intel® Simics® Simulator bindings in high level, idiomatic Rust"
documentation = "https://intel.github.io/simulator-bindings/crates/simics/"
readme = "../README.md"
homepage = "https://github.com/intel/simulator-bindings/"
repository = "https://github.com/intel/simulator-bindings/"
license = "Apache-2.0"
keywords = ["simics", "simulator", "intel", "x86", "modeling"]
categories = [
    "simulation",
    "virtualization",
    "hardware-support",
    "api-bindings",
    "emulators",
]

[dependencies]
anyhow = "1.0.86"
ordered-float = "4.2.0"
paste = "1.0.15"
raw-cstr = "0.1.4"
regex = "1.10.4"
thiserror = "1.0.61"
typed-builder = "0.18.2"
versions = { version = "6.2.0", features = ["serde"] }
walkdir = "2.5.0"

simics-api-sys = { version = "0.1.0", workspace = true }
simics-macro = { version = "0.1.0", workspace = true }

[build-dependencies]
anyhow = "1.0.86"
darling = "0.20.9"
prettyplease = "0.2.20"
proc-macro2 = "1.0.85"
quote = "1.0.36"
syn = "2.0.66"
versions = "6.2.0"

simics-api-sys = { version = "0.1.0", workspace = true }
simics-macro = { version = "0.1.0", workspace = true }
simics-build-utils = { version = "0.1.0", workspace = true }

[features]
default = ["link", "global-allocator"]
# Emit linking information in simics-api-sys to enable testing and running with cargo test
# and cargo run
link = ["simics-api-sys/link"]
# Set SimicsAlloc as the global allocator. This should not be unset.
global-allocator = []
